adapt exploratory notebook

--- a/notebooks/exploratory/04_time_slots_of_trces.ipynb
+++ b/notebooks/exploratory/04_time_slots_of_trces.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "716bccb7",
+   "metadata": {},
+   "source": [
+    "This notebook shows the timeframes in which we have trace data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "083747cd",
@@ -9,7 +17,6 @@
    "source": [
     "import sys\n",
     "sys.path.append('../../src')\n",
-    "sys.path.append('../../src/features')\n",
     "import trace_information as ti"
    ]
   },
